--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>  <!--Botão Home-->
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a> <br> <!--Botão YouTube-->
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a> <br> <!--Botão GitHub-->
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br> <!--Botão Instagram-->
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
